# setup-bazel-for-ts

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  foo.bzl  mocha.bzl  package-lock.json  package.json  pnpm-lock.yaml
js_test/: BUILD.bazel  to_import.ts
mocha_test/: BUILD.bazel  test.ts  test_two.ts
