load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_test")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
)

ts_project(
    name = "compile",
    srcs = ["test.ts"],
    declaration = True,
    deps = [
        ":to_import"
    ],
)

ts_project(
    name = "to_import",
    srcs = ["to_import.ts"],
    declaration = True,
)

# If run with
#
# ```
# bazel run //js_test:test
# ```
#
# will start a debug session that can be connected to with Visual Studio Code. VSCode will follow
# the inline source maps to the TypeScript source files (their copies in the output tree) so the
# debugger will show the TypeScript sources when stepping through code.
js_test(
    name = "test",
    data = [
        ":to_import"
    ],
    entry_point = "test.js",
)
