load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@npm//mocha:index.bzl", "mocha_test")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = [":__subpackages__"],
)

ts_project(
    name = "compile",
    srcs = ["test.ts"],
    declaration = True,
    deps = [
        ":to_import"
    ],
)

ts_project(
    name = "to_import",
    srcs = ["to_import.ts"],
    declaration = True,
)


mocha_test(
    name = "test_mocha_compile",
    data = [
        ":compile",
    ],
)

js_test(
    name = "test_compile",
    data = [
        ":to_import"
    ],
    entry_point = "test.js",
)

js_test(
    name = "test_to_import",
    entry_point = "to_import.js",
)
